tests/ui/parser/keyword-break-as-identifier.rs
// This file was auto-generated using 'src/etc/generate-keyword-tests.py break'

fn main() {
    let break = "foo"; //~ error: expected identifier, found keyword `break`
}
